<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Rush</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_new_meeting">NewMeetingActivity</string>
    <string name="title_activity_edit_meeting">EditMeetingActivity</string>
    <string name="title_activity_this_meeting">ThisMeetingActivity</string>
    <string name="title_activity_list_meetings">ListMeetingsActivity</string>
    <string name="title_activity_map_viewer">MapViewerActivity</string>
    <string name="title_activity_initialize">InitializeActivity</string>
    <string name="first_meeting_button_name">Plan</string>
    <string name="first_meeting_toggle_button_name">Toggle</string>
    <string name="first_meeting_toggle_handler">onToggleClicked</string>
    <string name="header_fragment_new_meeting_button_name">New</string>
    <string name="header_fragment_list_activities_button_name">List</string>
    <string name="header_fragment_toggle_button_name">Toggle</string>
    <string name="header_fragment_toggle_handler">onToggleClicked</string>

</resources>