<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstMeetingActivity" >
    
    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:alpha="0.85"
        android:background="#000000"
        android:visibility="visible" />

    <RelativeLayout
        android:layout_width="275dp"
        android:layout_height="275dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" >

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:alpha="0.95"
            android:background="@drawable/first_meeting_toggle"
            android:gravity="center_vertical|center_horizontal"
            android:onClick="@string/first_meeting_toggle_handler"
            android:text="@string/first_meeting_toggle_button_name"
            android:textColor="#000000" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:alpha="0.90"
            android:background="@drawable/first_meeting_button"
            android:text="@string/first_meeting_button_name" />

    </RelativeLayout>

</RelativeLayout>